# prefect-test

./: prefect.yaml  pyproject.toml
.github/workflows/: deploy-prefect-flow.yaml
