[tool.poetry]
name = "prefect-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "prefect_test"}]

[tool.poetry.dependencies]
python = "^3.9"
prefect = "^3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
